--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onasolar-clone",
+  "name": "gosolar",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,12 +9,25 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
+    "cors-anywhere": "^0.4.4",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.6.1",
+    "http-proxy-middleware": "^3.0.5",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1"
+    "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.1",
+    "react-scroll": "^1.9.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.1",
